Add temporary tournament page

--- a/src/main/webapp/tournament_form.html
+++ b/src/main/webapp/tournament_form.html
@@ -98,7 +98,7 @@
             type: "POST",
             url: "tournaments",
             data: formData,
-            success: function() {window.location.replace("tournament_page");},
+            success: function() {window.location.replace("http://localhost:8080/tournament_page.html");},
             dataType: "json",
             contentType : "application/json"
         });
