--- a/src/main/webapp/tournament_form.html
+++ b/src/main/webapp/tournament_form.html
@@ -21,7 +21,7 @@
 <div class="container-fluid">
     <div class="row body">
         <div class="side col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8 col-sm-offset-1 col-sm-10 col-xs-12">
-            <form id="tournament-form" method="post" action="tournaments">
+            <form id="tournament-form" method="post" action="tournament_page.html">
                 <div class="form-group">
                     <label for="tournament-name">Tournament name</label>
                     <input type="text" name="name" class="form-control" id="tournament-name" placeholder="World Championship 2016">
@@ -39,13 +39,13 @@
 
                 <div class="radio">
                     <label>
-                        <input type="radio" name="system" id="radiosRound" value="ROUND_ROBIN" checked>
+                        <input type="radio" name="system" id="radiosRound" value="ROUND_ROBIN" >
                         Round Robin sorting
                     </label>
                 </div>
                 <div class="radio">
                     <label>
-                        <input type="radio" name="system" id="radioSwiss" value="SWISS" disabled>
+                        <input type="radio" name="system" id="radioSwiss" value="SWISS" checked>
                         Swiss sorting
                     </label>
                 </div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="radio">
                     <label>
-                        <input type="radio" name="gameType" id="radio100" value="100" disabled>
+                        <input type="radio" name="gameType" id="radio100" value="100">
                         Draughts 100
                     </label>
                 </div>
