Add round's results saving and counting of points

--- a/src/main/webapp/tournament_page.html
+++ b/src/main/webapp/tournament_page.html
@@ -38,8 +38,9 @@
                 <span id="tournament-place"></span></h2>
             <h3 class="text-right">
                 <small>Arbiter</small>
-                <span id="arbiter"></span></h3>
-            <h3 class="text-right" id="date"></h3>
+                <span id="arbiter"></span>, <span class="text-right" id="date"></span>
+            </h3>
+
         </div>
     </div>
 
@@ -58,15 +59,15 @@
         <div class="col-lg-6 col-md-6 col-sm-7 col-xs-7">
             <h3>Rounds</h3>
             <!--<form id="tournament-round" method="post">-->
-                <table class="table table-striped table-bordered table-hover" id="games">
-                    <tr>
-                        <th>#</th>
-                        <th id="white" class="icon">White</th>
-                        <th id="result" class="icon">Result</th>
-                        <th id="black" class="icon">Black</th>
-                    </tr>
-                </table>
-                <button type="button" class="btn btn-default" id="submit-round">Save results</button>
+            <table class="table table-striped table-bordered table-hover" id="games">
+                <tr>
+                    <th>#</th>
+                    <th id="white" class="icon">White</th>
+                    <th id="result" class="icon">Result</th>
+                    <th id="black" class="icon">Black</th>
+                </tr>
+            </table>
+            <button type="button" class="btn btn-default" id="submit-round">Save results</button>
             <!--</form>-->
         </div>
     </div>
