Add arrow keypresses listening

--- a/src/main/webapp/tournament_form.html
+++ b/src/main/webapp/tournament_form.html
@@ -81,7 +81,7 @@
 </div>
 </body>
 
-<script src="/js/jquery.js"></script>
+<script src="/js/libs/jquery.js"></script>
 <script>
     $(".add").click(function () {
         $("#players > p:first-child").clone(true).insertBefore("#players > p:last-child");
