--- a/src/main/webapp/tournament_page.html
+++ b/src/main/webapp/tournament_page.html
@@ -73,8 +73,8 @@
     </div>
 </div>
 
-<script src="/js/jquery.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+<script src="/js/libs/jquery.js"></script>
+<script src="/js/libs/bootstrap.min.js"></script>
 <script src="/js/tournament.js"></script>
 </body>
 </html>
