--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,16 +18,15 @@
 	<div id="game-plies">
 	</div>
 </div>
-<!-- class="list-element-comment"-->
+
 <script id="plyTemplate" type="text/template">
 	<%= commentBefore %> <strong><%= indexString %></strong> <%= commentAfter %>
 </script>
 
-<script type="text/javascript" src="js/underscore.js"></script>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/backbone.js"></script>
+<script type="text/javascript" src="js/libs/underscore.js"></script>
+<script type="text/javascript" src="js/libs/jquery.js"></script>
+<script type="text/javascript" src="js/libs/backbone.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-
 
 </body>
 </html>
