--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,13 @@
 <script type="text/javascript" src="js/libs/underscore.js"></script>
 <script type="text/javascript" src="js/libs/jquery.js"></script>
 <script type="text/javascript" src="js/libs/backbone.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+
+<script type="text/javascript" src="js/ply/plyModels.js"></script>
+<script type="text/javascript" src="js/position/positionModels.js"></script>
+<script type="text/javascript" src="js/game/gameModels.js"></script>
+<script type="text/javascript" src="js/ply/plyViews.js"></script>
+<script type="text/javascript" src="js/position/positionViews.js"></script>
+<script type="text/javascript" src="js/game/gameViews.js"></script>
 
 </body>
 </html>
