--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,8 @@
 		<div id="game-controller">
 			<button id="prev-step" class="ctrl-btn"> < </button>	<button id="next-step" class="ctrl-btn"> > </button>
 		</div>
+		<div id="possiblePlies">
+		</div>
 	</div>
 	<div id="game-plies">
 	</div>
@@ -31,6 +33,7 @@
 <script type="text/javascript" src="js/position/positionModels.js"></script>
 <script type="text/javascript" src="js/game/gameModels.js"></script>
 <script type="text/javascript" src="js/ply/plyViews.js"></script>
+<script type="text/javascript" src="js/ply/possiblePlyViews.js"></script>
 <script type="text/javascript" src="js/position/positionViews.js"></script>
 <script type="text/javascript" src="js/game/gameViews.js"></script>
 
